feat: improve EMF integration